--- a/bullet_bill_v2_ui/package.json
+++ b/bullet_bill_v2_ui/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.62",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "axios": "^1.6.2",
     "immutable": "^5.0.0-beta.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,6 +19,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "typescript": "^4.9.5",
+    "typescript-plugin-css-modules": "^5.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
