--- a/bullet_bill_v2_ui/package.json
+++ b/bullet_bill_v2_ui/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "axios": "^1.6.2",
+    "bcryptjs-react": "^2.4.6",
     "immutable": "^5.0.0-beta.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
